Views Calendar 6.x
==================

See documentation at http://drupal.org/node/262064.

Version 2.0 dev
=================

- #319344 Add method of truncating title and other fields in calendar cells.
- #174580 Add rel=nofollow to back/next links.
- #319344 Add method of limiting the number of events that display in calendar cells.
- #290365 Add upcoming events block to default calendar so both the mini calendar and an upcoming events calendar are available blocks.
- #289166 Change ical link in default calendar to 'all time' link instead of single period.
- #315843 Make sure there is validation to keep you from trying to group multiple date values in the calendar.

Version 2.0 rc3
=================

- Change the jcalendar code to use the new display_ids.
- Make it possible to expose the calendar parts in the UI. To make this work better, combine year, month, day, and week handlers into a single handler.
- #311485 Make sure mini calendar has the right number of columns if using week number.
- #317660 Hard code line feeds in ical export to be sure they come through correctly in all systems.
- Start adding in Advanced help for the calendar.
- Move the colorpicker js info to the plugin so it isn't loaded everywhere.
- #314682 Add missing url() in jcalendar js code.
- #315955 Translation cleanup.
- Get colorpicker working in the Views UI again. I'm not loading the js in the best place, but at least it works now.
- Get rid of deprecated theme for ical output that is not being used in current code.
- #307544 Get rid of extra line feed at end of ical description and make sure template works correctly.
- #312170 Fix misplaced parenthesis in jCalendar theme.
- #313161 Use date_id as iCal UID to be sure it is unique.
- #303537 Display:relative should be position:relative.
- #313538 Fix color typo in calendar.css.
- #309608, #309253 Get rid of attempt to simplify the navigation query, it is too easily broken. 