@@ -107,18 +107,17 @@ function calendar_build_week(&$curday, $view, $items, $check_month = FALSE) {
   }
   for ($i = 0; $i < 7; $i++) {
     $curday_date = date_format($curday, DATE_FORMAT_DATE); 
+    $class = strtolower($weekdays[$i] .
+    ($curday_date == $today ? ' today' : '') .
+    ($curday_date < $today ? ' past' : '') .
+    ($curday_date > $today ? ' future' : '') .
+    ($view->mini ? ' mini' : ''));
     if ($check_month && ($curday_date < $view->min_date_date || $curday_date > $view->max_date_date || date_format($curday, 'n') != $month)) {
-      $class = strtolower($weekdays[$i] .
-      ($view->mini ? ' mini' : ''));
+      $class .= ' empty';
       $content = theme('calendar_empty_day');
     }
     else {
       $content = calendar_build_day($curday, $view, $items);
-      $class = strtolower($weekdays[$i] .
-      ($curday_date == $today ? ' today' : '') .
-      ($curday_date < $today ? ' past' : '') .
-      ($curday_date > $today ? ' future' : '') .
-      ($view->mini ? ' mini' : ''));
     }
 
     $rows[$week][] = array(
